// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssignmentList Component matches snapshot for empty state 1`] = `
<div
  class="rounded-lg border border-gray-200 bg-gray-50 p-8 text-center"
>
  <p
    class="text-gray-500"
  >
    暂无作业
  </p>
</div>
`;

exports[`AssignmentList Component matches snapshot for error state 1`] = `
<div
  class="rounded-lg border border-red-200 bg-red-50 p-4"
>
  <p
    class="text-red-700"
  >
    Request failed
  </p>
  <button
    class="mt-2 rounded bg-red-600 px-4 py-2 text-sm font-medium text-white hover:bg-red-700"
  >
    重试
  </button>
</div>
`;

exports[`AssignmentList Component matches snapshot in loading state 1`] = `
<div
  class="flex items-center justify-center p-8"
>
  <div
    class="h-8 w-8 animate-spin rounded-full border-4 border-blue-500 border-t-transparent"
  />
  <span
    class="ml-3 text-gray-600"
  >
    加载作业列表...
  </span>
</div>
`;

exports[`AssignmentList Component matches snapshot with assignments data 1`] = `
<div
  class="space-y-4"
>
  <h2
    class="text-lg font-semibold text-gray-900"
  >
    作业列表
  </h2>
  <div
    class="grid gap-4"
  >
    <div
      class="
                cursor-pointer rounded-lg border p-4 transition-all
                border-gray-200 bg-white hover:border-blue-300 hover:shadow-md
                cursor-not-allowed opacity-60
              "
    >
      <div
        class="flex items-start justify-between"
      >
        <div
          class="flex-1"
        >
          <h3
            class="font-medium text-gray-900"
          >
            Assignment 1: Introduction
          </h3>
          <p
            class="mt-1 line-clamp-2 text-sm text-gray-600"
          >
            <p>
              This is the first assignment
            </p>
            ...
          </p>
          <div
            class="mt-3 flex flex-wrap items-center gap-2"
          >
            <span
              class="inline-flex rounded-full px-2.5 py-0.5 text-xs font-medium bg-blue-100 text-blue-800"
            >
              已提交
            </span>
            <span
              class="text-xs text-gray-500"
            >
              截止: 
              2024/04/02 07:59 (已逾期)
            </span>
            <span
              class="text-xs text-gray-400"
            >
              提交方式: 
              online_upload
            </span>
          </div>
        </div>
      </div>
      <div
        class="mt-2 text-xs text-red-500"
      >
        作业已锁定
      </div>
    </div>
  </div>
</div>
`;

exports[`CourseList Component matches snapshot for empty state 1`] = `
<div
  class="p-4"
>
  <h2
    class="mb-4 text-xl font-semibold text-gray-800"
  >
    My Courses
  </h2>
  <div
    class="rounded-lg bg-gray-50 p-6 text-center"
  >
    <p
      class="text-gray-600"
    >
      No active courses found.
    </p>
  </div>
</div>
`;

exports[`CourseList Component matches snapshot for error state 1`] = `
<div
  class="p-4"
>
  <h2
    class="mb-4 text-xl font-semibold text-gray-800"
  >
    My Courses
  </h2>
  <div
    class="rounded-lg bg-red-50 p-4 text-red-700"
  >
    <p
      class="font-medium"
    >
      Error loading courses
    </p>
    <p
      class="mt-1 text-sm"
    >
      HTTP error! status: 401
    </p>
    <button
      class="mt-3 rounded-md bg-red-100 px-3 py-1 text-sm font-medium text-red-700 transition-colors hover:bg-red-200"
    >
      Retry
    </button>
  </div>
</div>
`;

exports[`CourseList Component matches snapshot in loading state 1`] = `
<div
  class="p-4"
>
  <h2
    class="mb-4 text-xl font-semibold text-gray-800"
  >
    My Courses
  </h2>
  <div
    class="space-y-3"
  >
    <div
      class="h-20 animate-pulse rounded-lg bg-gray-200"
    />
    <div
      class="h-20 animate-pulse rounded-lg bg-gray-200"
    />
    <div
      class="h-20 animate-pulse rounded-lg bg-gray-200"
    />
    <div
      class="h-20 animate-pulse rounded-lg bg-gray-200"
    />
  </div>
</div>
`;

exports[`CourseList Component matches snapshot with courses data 1`] = `
<div
  class="p-4"
>
  <h2
    class="mb-4 text-xl font-semibold text-gray-800"
  >
    My Courses
  </h2>
  <div
    class="space-y-2"
  >
    <button
      class="w-full rounded-lg border p-4 text-left transition-all duration-200 border-gray-200 bg-white hover:border-blue-300 hover:shadow-sm"
    >
      <div
        class="flex flex-col gap-1"
      >
        <span
          class="font-medium text-gray-900"
        >
          Introduction to Computer Science
        </span>
        <span
          class="text-sm text-gray-500"
        >
          CS101
        </span>
        <span
          class="text-xs text-gray-400"
        >
          Dr. Smith
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`DropZone Component matches snapshot in initial state 1`] = `
<div
  class="w-full space-y-4"
>
  <div
    class="
          relative border-2 border-dashed rounded-lg p-8
          flex flex-col items-center justify-center
          cursor-pointer transition-all duration-200
          border-gray-300 bg-gray-50 hover:border-gray-400 hover:bg-gray-100
          
        "
  >
    <input
      class="hidden"
      id="file-input"
      multiple=""
      type="file"
    />
    <svg
      class="w-12 h-12 mb-3 text-gray-400"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <p
      class="text-sm text-gray-600 text-center"
    >
      <span
        class="font-medium text-blue-600"
      >
        点击选择文件
      </span>
       或拖拽文件到此处
    </p>
    <p
      class="text-xs text-gray-400 mt-1"
    >
      支持多文件上传
    </p>
  </div>
</div>
`;

exports[`DropZone Component matches snapshot with files selected 1`] = `
<div
  class="w-full space-y-4"
>
  <div
    class="
          relative border-2 border-dashed rounded-lg p-8
          flex flex-col items-center justify-center
          cursor-pointer transition-all duration-200
          border-gray-300 bg-gray-50 hover:border-gray-400 hover:bg-gray-100
          
        "
  >
    <input
      class="hidden"
      id="file-input"
      multiple=""
      type="file"
    />
    <svg
      class="w-12 h-12 mb-3 text-gray-400"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <p
      class="text-sm text-gray-600 text-center"
    >
      <span
        class="font-medium text-blue-600"
      >
        点击选择文件
      </span>
       或拖拽文件到此处
    </p>
    <p
      class="text-xs text-gray-400 mt-1"
    >
      支持多文件上传
    </p>
  </div>
  <div
    class="bg-white border border-gray-200 rounded-lg overflow-hidden"
  >
    <div
      class="px-4 py-3 bg-gray-50 border-b border-gray-200 flex justify-between items-center"
    >
      <h3
        class="text-sm font-medium text-gray-700"
      >
        已选择文件 (
        1
        )
      </h3>
      <button
        class="text-xs text-red-600 hover:text-red-800 transition-colors"
      >
        清空全部
      </button>
    </div>
    <ul
      class="divide-y divide-gray-200 max-h-64 overflow-y-auto"
    >
      <li
        class="px-4 py-3"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex-1 min-w-0"
          >
            <p
              class="text-sm font-medium text-gray-900 truncate"
            >
              test.pdf
            </p>
            <p
              class="text-xs text-gray-500"
            >
              7 B
            </p>
          </div>
          <div
            class="flex items-center space-x-3 ml-4"
          >
            <button
              class="text-gray-400 hover:text-red-600 transition-colors"
              title="移除文件"
            >
              <svg
                class="w-5 h-5"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 18L18 6M6 6l12 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </li>
    </ul>
  </div>
  <button
    class="
            w-full py-2.5 px-4 rounded-lg font-medium text-sm
            transition-all duration-200
            bg-blue-600 text-white hover:bg-blue-700 active:bg-blue-800
          "
  >
    上传 1 个文件
  </button>
</div>
`;

exports[`DropZone Component matches snapshot with multiple files 1`] = `
<div
  class="w-full space-y-4"
>
  <div
    class="
          relative border-2 border-dashed rounded-lg p-8
          flex flex-col items-center justify-center
          cursor-pointer transition-all duration-200
          border-gray-300 bg-gray-50 hover:border-gray-400 hover:bg-gray-100
          
        "
  >
    <input
      class="hidden"
      id="file-input"
      multiple=""
      type="file"
    />
    <svg
      class="w-12 h-12 mb-3 text-gray-400"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <p
      class="text-sm text-gray-600 text-center"
    >
      <span
        class="font-medium text-blue-600"
      >
        点击选择文件
      </span>
       或拖拽文件到此处
    </p>
    <p
      class="text-xs text-gray-400 mt-1"
    >
      支持多文件上传
    </p>
  </div>
  <div
    class="bg-white border border-gray-200 rounded-lg overflow-hidden"
  >
    <div
      class="px-4 py-3 bg-gray-50 border-b border-gray-200 flex justify-between items-center"
    >
      <h3
        class="text-sm font-medium text-gray-700"
      >
        已选择文件 (
        2
        )
      </h3>
      <button
        class="text-xs text-red-600 hover:text-red-800 transition-colors"
      >
        清空全部
      </button>
    </div>
    <ul
      class="divide-y divide-gray-200 max-h-64 overflow-y-auto"
    >
      <li
        class="px-4 py-3"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex-1 min-w-0"
          >
            <p
              class="text-sm font-medium text-gray-900 truncate"
            >
              file1.pdf
            </p>
            <p
              class="text-xs text-gray-500"
            >
              8 B
            </p>
          </div>
          <div
            class="flex items-center space-x-3 ml-4"
          >
            <button
              class="text-gray-400 hover:text-red-600 transition-colors"
              title="移除文件"
            >
              <svg
                class="w-5 h-5"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 18L18 6M6 6l12 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </li>
      <li
        class="px-4 py-3"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex-1 min-w-0"
          >
            <p
              class="text-sm font-medium text-gray-900 truncate"
            >
              file2.doc
            </p>
            <p
              class="text-xs text-gray-500"
            >
              8 B
            </p>
          </div>
          <div
            class="flex items-center space-x-3 ml-4"
          >
            <button
              class="text-gray-400 hover:text-red-600 transition-colors"
              title="移除文件"
            >
              <svg
                class="w-5 h-5"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 18L18 6M6 6l12 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </li>
    </ul>
  </div>
  <button
    class="
            w-full py-2.5 px-4 rounded-lg font-medium text-sm
            transition-all duration-200
            bg-blue-600 text-white hover:bg-blue-700 active:bg-blue-800
          "
  >
    上传 2 个文件
  </button>
</div>
`;

exports[`Login Component matches snapshot in initial state 1`] = `
<div
  class="flex min-h-screen items-center justify-center bg-gray-50 px-4"
>
  <div
    class="w-full max-w-md rounded-lg bg-white p-8 shadow-lg"
  >
    <h1
      class="mb-2 text-2xl font-bold text-gray-900"
    >
      Canvas Drop Submit
    </h1>
    <p
      class="mb-6 text-sm text-gray-600"
    >
      请输入您的Canvas API Token以继续
    </p>
    <form
      class="space-y-4"
    >
      <div>
        <label
          class="mb-1 block text-sm font-medium text-gray-700"
          for="token"
        >
          API Token
        </label>
        <div
          class="relative"
        >
          <input
            class="w-full rounded-lg border border-gray-300 px-4 py-2 pr-10 text-sm focus:border-blue-500 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:bg-gray-100 disabled:cursor-not-allowed"
            id="token"
            placeholder="输入您的Canvas API Token"
            type="password"
            value=""
          />
          <button
            aria-label="显示Token"
            class="absolute right-3 top-1/2 -translate-y-1/2 text-gray-500 hover:text-gray-700 focus:outline-none"
            type="button"
          >
            <svg
              class="h-5 w-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
      <button
        class="w-full rounded-lg bg-blue-600 px-4 py-2 text-sm font-medium text-white transition-colors hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 disabled:bg-blue-400 disabled:cursor-not-allowed"
        disabled=""
        type="submit"
      >
        登录
      </button>
    </form>
    <div
      class="mt-6 text-xs text-gray-500"
    >
      <p
        class="mb-2"
      >
        如何获取API Token：
      </p>
      <ol
        class="list-decimal space-y-1 pl-4"
      >
        <li>
          登录Canvas网站
        </li>
        <li>
          点击右上角头像 → 设置
        </li>
        <li>
          滚动到"已批准的集成"部分
        </li>
        <li>
          点击"+ 新访问令牌"
        </li>
        <li>
          复制生成的Token并粘贴到上方
        </li>
      </ol>
    </div>
  </div>
</div>
`;
